Unittest Navbar, test correct implementation on smaller screens and alignment on bigger

--- a/src/styles/About.css
+++ b/src/styles/About.css
@@ -33,5 +33,4 @@
   height: 30px;
   display: flex;
   justify-content: center;
-  transform: translateY(-40px);
 }
