--- a/src/styles/Navbar.css
+++ b/src/styles/Navbar.css
@@ -1,102 +1,84 @@
 .navbar {
-    width: 100%;
-    height: 100px;
+  width: 100%;
+  height: 100px;
+  background-color: #121619;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between; 
+  align-items: center; 
+}
+
+.navbar .leftSide {
+  flex: 1; 
+  height: 100%;
+  display: flex;
+  align-items: center;
+  padding-left: 50px; 
+}
+
+.navbar .leftSide img {
+  width: 70px;
+}
+
+
+.navbar .navbarToggle {
+  display: none; 
+  background-color: transparent;
+  border: none;
+  color: white;
+  cursor: pointer;
+  margin-right: 50px; 
+}
+
+.navbar .navbarToggle svg {
+  font-size: 40px;
+}
+
+.navbar .navLinks {
+  flex: 1; 
+  height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  list-style-type: none;
+}
+
+.navbar .navLinks a {
+  color: white;
+  text-decoration: none;
+  margin: 20px;
+}
+
+@media (max-width: 768px) {
+  .navbar {
+    justify-content: space-between; 
+  }
+
+  .navbar .navbarToggle {
+    display: block; 
+  }
+
+  .navbar .navLinks {
+    display: none; 
+    flex-direction: column;
+    position: absolute;
+    top: 100px;
+    left: 0;
+    right: 0;
     background-color: #121619;
-    display: flex;
-    flex-direction: row;
-  }
-  
-  .navbar .leftSide {
-    flex: 50%;
-    height: 100%;
-    display: flex;
+    width: 100%; 
     align-items: center;
-    padding-left: 150px;
+    padding-top: 20px;
+    padding-bottom: 20px;
   }
-  
-  .navbar .leftSide img {
-    width: 70px;
+
+  .navbar .navLinks.open {
+    display: flex; 
   }
-  
-  .navbar .rightSide {
-    flex: 50%;
-    height: 100%;
-    display: flex;
-    align-items: center;
-    justify-content: center;
+
+  .navbar .navLinks.open a {
+    font-size: 24px; 
+    font-weight: bold; 
+    margin: 15px 0; 
   }
-  
-  .navbar a {
-    color: white;
-    text-decoration: none;
-    margin: 20px;
-  }
-  
-  .navbar .rightSide button {
-    background-color: transparent;
-    border: none;
-    color: white;
-    cursor: pointer;
-  }
-  
-  .navbar .rightSide svg {
-    font-size: 40px;
-  }
-  
-  .navbar #open {
-    padding-left: 0px;
-  }
-  .navbar #open img {
-    display: none;
-  }
-  
-  .navbar #close img {
-    display: inherit;
-  }
-  
-  .navbar #open .hiddenLinks {
-    display: inherit;
-    margin-left: 30px;
-  }
-  
-  .navbar #close .hiddenLinks {
-    display: none;
-  }
-  
-  .navbar #open a {
-    width: 70px;
-    margin: 5px;
-  }
-  @media only screen and (max-width: 900px) {
-    .navbar .rightSide a {
-      width: 70px;
-    }
-    .navbar .leftSide {
-      padding-left: 50px;
-    }
-  }
-  
-  @media only screen and (max-width: 600px) {
-    .navbar .rightSide a {
-      display: none;
-    }
-  
-    .navbar .rightSide {
-      justify-content: flex-end;
-      padding-right: 50px;
-    }
-  
-    .navbar .rightSide button {
-      display: inherit;
-    }
-  }
-  
-  @media only screen and (min-width: 600px) {
-    .navbar .rightSide button {
-      display: none;
-    }
-  
-    .hiddenLinks {
-      display: none;
-    }
-  }
+}
